--- a/mbofui/app/views/popup.html
+++ b/mbofui/app/views/popup.html
@@ -1,11 +1,22 @@
 <div>
   <div>
     <strong>
-      {{event.category}}
+      {{event.category | categorize: event_categories}}
     </strong>
   </div>
-    {{event.startTime  | date:'medium'}} - {{event.endTime  | date:'medium'}}
+  <div>
+    <!-- need smarter display of datetime.
+    - if all one day - omit second date
+    - if today - say so (Today - hh:mm)
+    -->
+    <small>{{event.startTime  | date:'medium'}} - {{event.endTime  | date:'medium'}}</small>
+  </div>
+  <hr style="margin:5px 0">
   <div>
     {{event.message}}
   </div>
+  <p class="btn-group btn-group-justified">
+    <a href="#" class="btn btn-default">Going</a>
+    <a href="#" class="btn btn-default">Maybe</a>
+  </p>
 </div>
