TLMBLGIS-29 - a bit more tinkering with popup rendering

--- a/mbofui/app/views/popup.html
+++ b/mbofui/app/views/popup.html
@@ -12,10 +12,10 @@
     <small>{{event.startTime  | date:'medium'}} - {{event.endTime  | date:'medium'}}</small>
   </div>
   <hr style="margin:5px 0">
-  <div>
+  <p>
     {{event.message}}
-  </div>
-  <p class="btn-group btn-group-justified">
+  </p>
+  <p class="btn-group btn-group-sm btn-group-justified">
     <a href="#" class="btn btn-default">Going</a>
     <a href="#" class="btn btn-default">Maybe</a>
   </p>
