TLMBLGIS-19-2 - more validation

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -28,3 +28,8 @@ body {
 .has-error span.req-text, .has-error label {
   color:#c00;
 }
+
+.alert-inline {
+  color:#a94442;
+  display: inline-block;
+}
