TLMBLGIS-48 - configure webshim datetime picker

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -33,3 +33,8 @@ body {
   color:#a94442;
   display: inline-block;
 }
+
+ .ws-picker-header button[data-action="setMonthList"], .ws-picker-header button[data-action="setYearList"],.ws-picker-header button[data-action="setDayList"] {
+   color:#05c  !important;
+   text-decoration: underline !important
+ }
