TLMBLGIS-53 - hide Now button to mask bug in pollyfill

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -38,3 +38,7 @@ body {
    color:#05c  !important;
    text-decoration: underline !important
  }
+
+.ws-po-box button[aria-label="Now"] {
+  display: none !important;
+}
