TLMBLGIS-72 - format dates

--- a/mbofui/app/views/popup.html
+++ b/mbofui/app/views/popup.html
@@ -4,10 +4,10 @@
       Event title would go here
     </strong>
   </div>
-    {{event.category}}
-    <div class="">
-      <small>{{event.startTime | date:'MM/dd h:mma'}} - {{event.endTime | date:'MM/dd h:mma'}}</small>
-    </div>
+  {{event.category}}
+  <div class="">
+    <small>{{event.dateBlob}}</small>
+  </div>
   <hr class="popupRule">
   <div class="btn-group btn-group-sm btn-group-justified">
     <a role="button" href="" class="btn btn-primary" style="color:#fff">
