temp-user-edit - removing expired events, catching stale events and removing, displaying alerts when a stale event is edited

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -52,6 +52,14 @@ body {
   display: none !important;
 }
 .leaflet-popup-content {max-width:100%;width:400px}
+.alertPanel {
+  position:absolute;
+  top:80px;
+  left:20%;
+  right:20%;
+  z-index: 1
+}
+
 
 @media (max-width: 480px) {
   .leaflet-popup-content {width:auto}
