--- a/mbofui/app/views/popup.html
+++ b/mbofui/app/views/popup.html
@@ -17,7 +17,8 @@
       Maybe (3)
     </a>
   </div>
-  <div class="btn-group btn-group-sm btn-group-justified" ng-show="event.mine">
+  <div class="btn-group btn-group-sm btn-group-justified" ng-show="event.mine && event.inTime">
+
     <a id="editthing" data-event="{{event}}" role="button" href="" class="btn btn-primary" style="color:#fff" >
       Edit
     </a>
