--- a/mbofui/app/views/event-create.html
+++ b/mbofui/app/views/event-create.html
@@ -1,4 +1,4 @@
-<div class="form-group eventTitle">
+<div class="form-group title">
   <label for="eventText">Title</label>
   <span class="req-text">(required)</span>
   <input type="text" ng-model="$parent.newEventTitle" class="form-control" id="eventTitle" required></textarea>
