--- a/mbofui/app/views/event-edit.html
+++ b/mbofui/app/views/event-edit.html
@@ -30,3 +30,11 @@
   <span class="req-text">(required)</span><span class="endToSoon alert-inline" style="display:none">&nbsp;&nbsp;Cannot end events in the past.</span>
   <input id="endTimeEdit" value="" name="endTime" min="" class="form-control" type="datetime-local">
 </div>
+<div class="form-group hashTagAndAddess">
+  <label for="hashtag" class="sr-only">Hashtags</label>
+  <input id="hashtag" name="hashtag"  class="form-control" type="text" placeholder="Hashtags">
+</div>
+<label for="addressEdit" class="sr-onlyxxx">Address</label>
+<div class="address">
+  <input id="addressEdit" name="address"  ng-model="$parent.editEvent.address" class="form-control" type="text" placeholder="Address">
+</div>
