TLMBLGIS-115 - create and edit hashtags

--- a/mbofui/app/views/event-edit.html
+++ b/mbofui/app/views/event-edit.html
@@ -32,7 +32,7 @@
 </div>
 <div class="form-group hashTagAndAddess">
   <label for="hashtag" class="sr-only">Hashtags</label>
-  <input id="hashtag" name="hashtag"  class="form-control" type="text" placeholder="Hashtags">
+  <input id="hashtag" name="hashtag" ng-model="$parent.editEvent.hashTag" class="form-control" type="text" placeholder="Hashtags">
 </div>
 <label for="addressEdit" class="sr-onlyxxx">Address</label>
 <div class="address">
