--- a/mbofui/app/views/event-create.html
+++ b/mbofui/app/views/event-create.html
@@ -31,7 +31,7 @@
 </div>
 <div class="form-group hashTagAndAddess">
   <label for="hashtag" class="sr-only">Hashtags</label>
-  <input id="hashtag" name="hashtag"  class="form-control" type="text" placeholder="Hashtags">
+  <input id="hashtag" ng-model="$parent.newEventHashtag"  name="hashtag"  class="form-control" type="text" placeholder="Hashtags">
 </div>
 <label for="address" class="sr-only">Address</label>
 <div class="input-group address">
