--- a/mbofui/app/views/event-create.html
+++ b/mbofui/app/views/event-create.html
@@ -5,12 +5,12 @@
   <input type="text" ng-model="$parent.newEventTitle" class="form-control" id="eventTitle" required></textarea>
 </div>
 <div class="form-group eventText">
-  <label for="eventText">{{strings.modal_description}}</label>
+  <label for="eventText">Description</label>
   <span class="req-text">(required)</span>
   <textarea ng-model="$parent.newEventText" class="form-control" id="eventText" rows="3" required></textarea>
 </div>
 <div class="form-group">
-  <label for="categoryCreate">{{strings.app_categories}}</label>
+  <label for="categoryCreate">Categories</label>
   <select id="categoryCreate" ng-model="$parent.selected_category" ng-options="item as item for item in event_categories" class="form-control">
       <option value="">---Please select---</option>
   </select>
@@ -20,12 +20,12 @@
   Cannot have an event that starts after it ends.
 </div>
 <div class="form-group startTime">
-  <label for="startTime">{{strings.modal_starttime}}</label>
+  <label for="startTime">Start time</label>
   <span class="req-text">(required)</span>
   <input id="startTime" name="startTime" min="" class="form-control" type="datetime-local">
 </div>
 <div class="form-group endTime">
-  <label for="endTime">{{strings.modal_endtime}}</label>
+  <label for="endTime">End time</label>
   <span class="req-text">(required)</span><span class="endToSoon alert-inline" style="display:none">&nbsp;&nbsp;Cannot end events in the past.</span>
   <input id="endTime" name="endTime" min="" class="form-control" type="datetime-local">
 </div>
