--- a/mbofui/app/views/event-edit.html
+++ b/mbofui/app/views/event-edit.html
@@ -4,12 +4,12 @@
   <input type="text" ng-model="$parent.editEvent.title" class="form-control" id="eventTitleEdit" required></textarea>
 </div>
 <div class="form-group eventText">
-  <label for="eventTextEdit">{{strings.modal_description}}</label>
+  <label for="eventTextEdit">Edit Event</label>
   <span class="req-text">(required)</span>
   <textarea class="form-control" id="eventTextEdit" rows="3" required ng-model="$parent.editEvent.message"></textarea>
 </div>
 <div class="form-group">
-  <label for="categoryEdit">{{strings.app_categories}}</label>
+  <label for="categoryEdit">Categories</label>
   <select ng-model="$parent.editEvent.category" class="form-control" id="categoryEdit">
     <option> -- select a category -- </option>
     <option ng-repeat="category in event_categories" value="{{category}}">{{category}}</option>
@@ -21,12 +21,12 @@
   Cannot have an event that starts after it ends.
 </div>
 <div class="form-group startTime">
-  <label for="startTimeEdit">{{strings.modal_starttime}}</label>
+  <label for="startTimeEdit">Start time</label>
   <span class="req-text">(required)</span>
   <input id="startTimeEdit" value="" name="startTime" min="" class="form-control" type="datetime-local">
 </div>
 <div class="form-group endTime">
-  <label for="endTimeEdit">{{strings.modal_endtime}}</label>
+  <label for="endTimeEdit">End time</label>
   <span class="req-text">(required)</span><span class="endToSoon alert-inline" style="display:none">&nbsp;&nbsp;Cannot end events in the past.</span>
   <input id="endTimeEdit" value="" name="endTime" min="" class="form-control" type="datetime-local">
 </div>
