--- a/mbofui/app/views/popup.html
+++ b/mbofui/app/views/popup.html
@@ -21,7 +21,7 @@
     </a>
   </div>
   <div class="btn-group btn-group-sm btn-group-justified" ng-show="event.mine && event.inTime">
-    <a data-toggle="modal" data-target="#bofModalEdit" data-event="{{event}}" role="button" href="" class="btn btn-primary editEvent" style="color:#fff" >
+    <a data-toggle="modal" data-backdrop="static" data-target="#bofModalEdit" data-event="{{event}}" role="button" href="" class="btn btn-primary editEvent" style="color:#fff" >
       Edit
     </a>
   </div>
