--- a/mbofui/app/views/event-create.html
+++ b/mbofui/app/views/event-create.html
@@ -35,8 +35,8 @@
 </div>
 <label for="address" class="sr-only">Address</label>
 <div ng-class="addressDirty ? 'input-group address' : 'address'">
-  <input id="address" name="address" ng-model-options='{ debounce: 1000 }' ng-change="addressEdited()" ng-model="newEventAddress" class="form-control" type="text" placeholder="Address">
+  <input id="address" name="address" ng-model-options='{ debounce: 1000 }' ng-change="addressEdited()" ng-model="$parent.newEventAddress" class="form-control" type="text" placeholder="Address">
   <div class="input-group-btn" ng-show="addressDirty" >
-    <button  ng-show="addressDirty" class="btn btn-primary" type="button" ng-click="lookUpAddress(currentMapAPI)">Save New Address</button>
+    <button  ng-show="addressDirty" class="btn btn-primary" type="button" ng-click="lookUpNewCoords(currentMapAPI)">Save New Address</button>
   </div>
 </div>
