--- a/mbofui/app/views/coords-lookup.html
+++ b/mbofui/app/views/coords-lookup.html
@@ -5,7 +5,7 @@
 <div class="input-group">
   <input type="text" class="form-control coordsLookUp" placeholder="Address" ng-model="$parent.coordsLookUp">
   <span class="input-group-btn">
-    <button class="btn btn-primary" type="button" ng-click="lookUpCoords(currentMapAPI)">Verify Address</button>
+    <button class="btn btn-primary" type="button" ng-click="lookUpCoords(currentMapAPI, 'specifiedAddress')">Verify Address</button>
   </span>
 </div>
 <p  ng-show="addressLookupResults.length"></p>
