--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -21,20 +21,19 @@ body {
 }
 
 .logo-peacock1 {
-  left: 20%;
   position: absolute;
-  right: 20%;
   top: 10%;
+  width:100%;
   z-index: 1;
-  background:transparent url(../images/peacock-head2.png) top center no-repeat;
-  text-align:center;height:300px;
+  background:transparent url(../images/peacock-head2.png) center no-repeat;
+  height:300px;
 }
 .login-box {
   text-align:center;
   left: 20%;
   position: absolute;
   right: 20%;
-  top: 375px;
+  top: 385px;
   z-index: 1;
   background:transparent;
   height:200px;
@@ -104,13 +103,19 @@ body {
 @media (max-width: 480px) {
   .leaflet-popup-content {width:auto}
   .logo-peacock1 {
-    left: 20%;
-    width:275px;
-    right: 10%;
+    left: auto;
+    width:100%;
+    right: auto;
   }
   .login-box {
-    left: 20%;
-    right: 10%;
+    width:100%;
+    text-align:center;
+    left: auto;
+    right: auto;
+    top: 345px;
+    z-index: 1;
+    background:transparent;
+    height:200px;
   }
 }
 @media screen and (min-device-width: 375px)
@@ -118,11 +123,10 @@ body {
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation:landscape) {
   .logo-peacock1 {
-    left: 15%;
-    top:50px;
+    left: 25px;
+    top:35px;
     width:300px;
     right: auto;
-    text-align:left
   }
   .login-box {
     text-align:right;
@@ -134,3 +138,153 @@ body {
     background:transparent;
     height:300px;
   }
+
+
+    /* Portrait and Landscape */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 480px)
+      and (-webkit-min-device-pixel-ratio: 2) {
+      .logo-peacock1 {
+        border:1px solid blue
+      }
+    }
+
+    /* Portrait */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 480px)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: portrait) {
+        .logo-peacock1 {
+          border:1px dashed blue
+        }
+
+    }
+
+    /* Landscape */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 480px)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: landscape) {
+        .logo-peacock1 {
+          border:1px dotted blue
+
+        }
+
+
+
+    }
+
+    /* ----------- iPhone 5 and 5S ----------- */
+
+    /* Portrait and Landscape */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 568px)
+      and (-webkit-min-device-pixel-ratio: 2) {
+        .logo-peacock1 {
+          border:1px solid orange
+        }
+
+    }
+
+    /* Portrait */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 568px)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: portrait) {
+        .logo-peacock1 {
+          border:1px dashed orange
+        }
+
+
+
+    }
+
+    /* Landscape */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 568px)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: landscape) {
+        .logo-peacock1 {
+          border:1px dotted orange
+        }
+
+    }
+
+    /* ----------- iPhone 6 ----------- */
+
+    /* Portrait and Landscape */
+    @media only screen
+      and (min-device-width: 375px)
+      and (max-device-width: 667px)
+      and (-webkit-min-device-pixel-ratio: 2) {
+        .logo-peacock1 {
+          border:1px solid green;
+        }
+
+    }
+
+    /* Portrait */
+    @media only screen
+      and (min-device-width: 375px)
+      and (max-device-width: 667px)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: portrait) {
+        .logo-peacock1 {
+          border:1px dashed green;
+        }
+
+    }
+
+    /* Landscape */
+    @media only screen
+      and (min-device-width: 375px)
+      and (max-device-width: 667px)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: landscape) {
+        .logo-peacock1 {
+          border:1px dotted green
+        }
+
+    }
+
+    /* ----------- iPhone 6+ ----------- */
+
+    /* Portrait and Landscape */
+    @media only screen
+      and (min-device-width: 414px)
+      and (max-device-width: 736px)
+      and (-webkit-min-device-pixel-ratio: 3) {
+        .logo-peacock1 {
+          border:1px solid back
+        }
+
+    }
+
+    /* Portrait */
+    @media only screen
+      and (min-device-width: 414px)
+      and (max-device-width: 736px)
+      and (-webkit-min-device-pixel-ratio: 3)
+      and (orientation: portrait) {
+        .logo-peacock1 {
+          border:1px dashed back
+        }
+
+    }
+
+    /* Landscape */
+    @media only screen
+      and (min-device-width: 414px)
+      and (max-device-width: 736px)
+      and (-webkit-min-device-pixel-ratio: 3)
+      and (orientation: landscape) {
+        .logo-peacock1 {
+          border:1px dotted back
+        }
+    }
