TLMBLGIS-167 - simplify login markup, account for iPhone 4, 5 and 6

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -20,25 +20,21 @@ body {
   padding-top:50px
 }
 
-.logo-peacock1 {
+.logo-login {
+  display: flex;
+  flex-direction: column;
+ justify-content: center;
+}
+.logo-peacock {
   position: absolute;
-  top: 10%;
+  top: 15%;
   width:100%;
   z-index: 1;
-  background:transparent url(../images/peacock-head2.png) center no-repeat;
-  height:300px;
-}
-.login-box {
+  background:transparent url(../images/peacock-head2.png) top center no-repeat;
+  height:350px;
+  padding-top:300px;
   text-align:center;
-  left: 20%;
-  position: absolute;
-  right: 20%;
-  top: 385px;
-  z-index: 1;
-  background:transparent;
-  height:200px;
 }
-
 
 .status {
     display: none;
@@ -100,191 +96,32 @@ body {
   display: none !important;
 }
 
-@media (max-width: 480px) {
-  .leaflet-popup-content {width:auto}
-  .logo-peacock1 {
-    left: auto;
-    width:100%;
-    right: auto;
-  }
-  .login-box {
-    width:100%;
-    text-align:center;
-    left: auto;
-    right: auto;
-    top: 345px;
-    z-index: 1;
-    background:transparent;
-    height:200px;
+/* Smartphones (portrait and landscape) */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .logo-peacock {
+    top:5%;
+    padding: 200px 0 0 0
   }
 }
-@media screen and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation:landscape) {
-  .logo-peacock1 {
-    left: 25px;
-    top:35px;
-    width:300px;
-    right: auto;
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)  and (orientation : landscape) {
+  .logo-peacock {
+    background-position: 20px 0;
+    text-align: right;
+    padding: 100px 20px 0 0
   }
-  .login-box {
-    text-align:right;
-    right: 20%;
-    position: absolute;
-    left: auto;
-    top: 125px;
-    z-index: 1;
-    background:transparent;
-    height:300px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation : portrait) {
+  .logo-peacock {
+    padding: 300px 0 0 0
   }
+}
 
-
-    /* Portrait and Landscape */
-    @media only screen
-      and (min-device-width: 320px)
-      and (max-device-width: 480px)
-      and (-webkit-min-device-pixel-ratio: 2) {
-      .logo-peacock1 {
-        border:1px solid blue
-      }
-    }
-
-    /* Portrait */
-    @media only screen
-      and (min-device-width: 320px)
-      and (max-device-width: 480px)
-      and (-webkit-min-device-pixel-ratio: 2)
-      and (orientation: portrait) {
-        .logo-peacock1 {
-          border:1px dashed blue
-        }
-
-    }
-
-    /* Landscape */
-    @media only screen
-      and (min-device-width: 320px)
-      and (max-device-width: 480px)
-      and (-webkit-min-device-pixel-ratio: 2)
-      and (orientation: landscape) {
-        .logo-peacock1 {
-          border:1px dotted blue
-
-        }
-
-
-
-    }
-
-    /* ----------- iPhone 5 and 5S ----------- */
-
-    /* Portrait and Landscape */
-    @media only screen
-      and (min-device-width: 320px)
-      and (max-device-width: 568px)
-      and (-webkit-min-device-pixel-ratio: 2) {
-        .logo-peacock1 {
-          border:1px solid orange
-        }
-
-    }
-
-    /* Portrait */
-    @media only screen
-      and (min-device-width: 320px)
-      and (max-device-width: 568px)
-      and (-webkit-min-device-pixel-ratio: 2)
-      and (orientation: portrait) {
-        .logo-peacock1 {
-          border:1px dashed orange
-        }
-
-
-
-    }
-
-    /* Landscape */
-    @media only screen
-      and (min-device-width: 320px)
-      and (max-device-width: 568px)
-      and (-webkit-min-device-pixel-ratio: 2)
-      and (orientation: landscape) {
-        .logo-peacock1 {
-          border:1px dotted orange
-        }
-
-    }
-
-    /* ----------- iPhone 6 ----------- */
-
-    /* Portrait and Landscape */
-    @media only screen
-      and (min-device-width: 375px)
-      and (max-device-width: 667px)
-      and (-webkit-min-device-pixel-ratio: 2) {
-        .logo-peacock1 {
-          border:1px solid green;
-        }
-
-    }
-
-    /* Portrait */
-    @media only screen
-      and (min-device-width: 375px)
-      and (max-device-width: 667px)
-      and (-webkit-min-device-pixel-ratio: 2)
-      and (orientation: portrait) {
-        .logo-peacock1 {
-          border:1px dashed green;
-        }
-
-    }
-
-    /* Landscape */
-    @media only screen
-      and (min-device-width: 375px)
-      and (max-device-width: 667px)
-      and (-webkit-min-device-pixel-ratio: 2)
-      and (orientation: landscape) {
-        .logo-peacock1 {
-          border:1px dotted green
-        }
-
-    }
-
-    /* ----------- iPhone 6+ ----------- */
-
-    /* Portrait and Landscape */
-    @media only screen
-      and (min-device-width: 414px)
-      and (max-device-width: 736px)
-      and (-webkit-min-device-pixel-ratio: 3) {
-        .logo-peacock1 {
-          border:1px solid back
-        }
-
-    }
-
-    /* Portrait */
-    @media only screen
-      and (min-device-width: 414px)
-      and (max-device-width: 736px)
-      and (-webkit-min-device-pixel-ratio: 3)
-      and (orientation: portrait) {
-        .logo-peacock1 {
-          border:1px dashed back
-        }
-
-    }
-
-    /* Landscape */
-    @media only screen
-      and (min-device-width: 414px)
-      and (max-device-width: 736px)
-      and (-webkit-min-device-pixel-ratio: 3)
-      and (orientation: landscape) {
-        .logo-peacock1 {
-          border:1px dotted back
-        }
-    }
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation : landscape) {
+  .logo-peacock {
+    background-position: 20px 0;
+    text-align: right;
+    padding: 100px 20px 0 0
+  }
+}
