--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -66,6 +66,20 @@ body {
 .popupMessageToggle{
   margin-top:15px
 }
+.overlay {
+  background: #fff;
+  color:000;
+  text-align: center
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  pointer-events: none;
+  padding:200px 20px;
+  font-size:30px
+}
 
  .ws-picker-header button[data-action="setMonthList"], .ws-picker-header button[data-action="setYearList"],.ws-picker-header button[data-action="setDayList"] {
    color:#05c  !important;
