--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -20,20 +20,53 @@ body {
   padding-top:50px
 }
 
+
+nav.navbar {
+  background:#00274c
+}
+.navbar-default .navbar-brand {
+  color: #fff !important;
+}
+
+.navbar-default a.dropdown-toggle, .plainLink {
+  color: #fff !important
+}
+
+.navbar-default a.dropdown-toggle:focus, .plainLink:focus {
+  outline: 1px dotted #fff
+}
+
+.navbar-default .dropdown.open > a{
+  color: #000 !important;
+  background: #ffcb05 !important;
+  outline:none;
+}
+
+.navbar-collapse.collapse.in .dropdown-menu a {
+  color:#fff !important
+}
+
+.navbar-brand {
+  background: transparent url(../images/nav-logo.png) 2px 2px no-repeat;
+  padding-left:50px !important;
+}
 .logo-login {
   display: flex;
   flex-direction: column;
  justify-content: center;
 }
-.logo-peacock {
+.splash {
   position: absolute;
   top: 15%;
   width:100%;
   z-index: 1;
-  background:transparent url(../images/peacock-head2.png) top center no-repeat;
+  background:transparent url(../images/splash-logo.png) top center no-repeat;
   height:350px;
-  padding-top:300px;
+  padding-top:100px;
   text-align:center;
+}
+.splash-small {
+  background:transparent url(../images/splash-logo-small.png) top center no-repeat;
 }
 
 .status {
