TLMBLGIS-168-2 - add message to edit event failed validation modal

--- a/mbofui/app/views/event-create.html
+++ b/mbofui/app/views/event-create.html
@@ -1,4 +1,4 @@
-<div class="alert alert-warning" role="alert" ng-show="validationFailuresCreate">Sorry, some fields are missing or wrong.</div>
+<div class="alert alert-warning" role="alert" ng-show="validationFailuresCreate">Sorry, some fields are missing or incorrect.</div>
 <div class="form-group title">
   <label for="eventTitle">Title</label>
   <span class="req-text">(required)</span>
