--- a/mbofui/app/views/event-edit.html
+++ b/mbofui/app/views/event-edit.html
@@ -1,3 +1,4 @@
+<div class="alert alert-warning" role="alert" ng-show="validationFailuresEdit">Sorry, some fields are missing or incorrect.</div>
 <div class="form-group eventTitle">
   <label for="eventTextEdit">Title</label>
   <span class="req-text">(required)</span>
