TLMBLGIS-195 - add counts and better formatting to text only events

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -87,6 +87,9 @@ nav.navbar {
 .muted {
   color:#777
 }
+.list-group-metadata {
+  margin:5px 0;
+}
 .alert-inline {
   color:#a94442;
   display: inline-block;
